--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./Day3/temp.css">
+    <title>Interview</title>
 </head>
 <body>
-    <h1>Training SECE CSE A</h1>
+    <h1>Questions</h1>
+    <ol>
+        <li>What is spec file - Component Based Achitecture?</li>
+        <p><b>Ans: </b> A spec file contains test cases written to ensure that a specific component, function, or module behaves as expected.
+            The term "spec" is short for specification, as it defines what the code under test should do.</p>
+        <li>What is the name of the tree in DOM?</li>
+        <p><b>Ans: </b>N-Array</p>
+        <li>Git - Distributed or Centralized</li>
+        <p><b>Ans: </b> Distributed</p>
+        <li>First Step to make a repository in git?</li>
+        <p><b>Ans: </b>git init</p>
+        <li>Why git is fast ?</li>
+        <p><b>Ans: </b> Git is developed in C</p>
+        <li>How Staging Area is called before first push?</li>
+        <p><b>Ans: </b>Caching</p>
+        <li>Root folder is called as Repository then the sub folder in repository is called as?</li>
+        <p><b>Ans: </b>not(folder,sub-folder,repository)</p>
+        <li>If h1..../h1 is given in the html file without the basic Structure, What is the output?</li>
+        <p><b>Ans: </b>The content inside the h1 tag(As it is the html file, it takes the basic structure automatically)</p>
+        <li>If title..../title is given in the html file without the basic Structure, What is the output?</li>
+        <p><b>Ans: </b>The content inside the title tag will be the title for the tab(As it is the html file, it takes the basic structure automatically)</p>
+        <li>If h1.../h1 title..../title is given in the html file without the basic Structure, What is the output and Why does title tag comes in body?</li>
+        <p><b>Ans: </b>The title tag appears in the body when inspecting because the browser encounters visible content like h1 first, causing it to start rendering the body implicitly before processing the title.</p>
+    </ol>
 </body>
 </html>
