--- a/Task/Int.html
+++ b/Task/Int.html
@@ -29,6 +29,45 @@
     <p>The content inside the title tag will be the title of the tab(As it is the html file, it takes the basic structure automatically)</p>
     <li>If h1.../h1 title..../title is given in the html file without the basic Structure, What is the output and Why does title tag comes in body?</li>
     <p>The title tag appears in the body when inspecting because the browser encounters visible content like h1 first, causing it to start rendering the body implicitly before processing the title.</p>
+    <li>If title..../title is given in the html file without the basic Structure, What is the output?</li>
+        <p>The content inside the title tag will be the title for the tab(As it is the html file, it takes the basic structure automatically)</p>
+        <li>If h1.../h1 title..../title is given in the html file without the basic Structure, What is the output and Why does title tag comes in body?</li>
+        <p>The title tag appears in the body when inspecting because the browser encounters visible content like h1 first, causing it to start rendering the body implicitly before processing the title.</p>
+        <li>Whatever content is written in html is that box model?</li>
+        <p><content in html file is not box model,but the output seen is box model</p>
+        <li>Is your margin overlapping with your content or padding</li>
+        <p>overlapping with padding & overlapping with content</p>
+        <li>The direction of application fo the box model components</li>
+        <p>border to content-> towards, content to border-> outwards,content to padding outwards</p>
+        <li>Components of Box Model</li>
+        <p>margin,border,padding,content</p>
+        <li>Why git is not showing git commit command while adding a file and it is showing command for unstage ?
+        </li>
+        <p>git is not showing git commit command while adding a file and it is showing command for unstage because files are already staged and ready for a commit. </p>
+        <li>What is the difference before first push and after first push ?</li>
+        <p>before first push there is no link between local and remote repository but after first push there will be link between local and remote repository.
+        </p>
+        <li> How the title tag is fetched to head and h1 is fetched to body when rendering a HTML file which has no structure ?
+        </li>
+        <p>When rendering an HTML file with no structure, the browser automatically places the title tag into the head and the h1 tag into the body based on HTML parsing rules and defaults.
+        </p>
+        <li>What is the difference between href and src and why it is used in img and anchor tag ?
+        </li>
+        <p>href is used with anchor tag as it is used to redirect to external link while src tag is used with img as it is used to embed a content inside the webpage.
+        </p>
+        <li>Why there is three dots in if...else and do...while ?
+        </li>
+        <p>The three dots (...) in if...else and do...while in documentation or examples are placeholders used to indicate omitted code or logic. They imply that additional statements or code blocks should be added in those places.
+        </p>
+        <li>What is the difference between spread and rest operator ?
+        </li>
+        <p>The spread operator (...) expands an array or object, while the rest operator (...) collects multiple elements into an array or parameters and used as function parameter.</p>
+        <li>In for in loop while traversing through an object why the output is undefined when accessing using dot operator ?</li>
+        <p>The output is undefined because obj.key is looking for a property literally named "key" in the object, instead of dynamically accessing the property using the value of the key variable.</p>
+        <li>Why Components should start with Capital letter?</li>
+        <p>Components should start with a capital letter because React uses capitalized names to differentiate components from standard HTML tags.</p>
+        <li>While exporting a component why default keyword is mandatory?</li>
+        <p>The default keyword is not mandatory; it specifies a default export, allowing the component to be imported without curly braces, unlike named exports which require them.</p>
     </ol>
     
 </body>
