--- a/Task/Int.html
+++ b/Task/Int.html
@@ -68,6 +68,13 @@
         <p>Components should start with a capital letter because React uses capitalized names to differentiate components from standard HTML tags.</p>
         <li>While exporting a component why default keyword is mandatory?</li>
         <p>The default keyword is not mandatory; it specifies a default export, allowing the component to be imported without curly braces, unlike named exports which require them.</p>
+        <li>What is use of StrictMode in main.jsx</li>
+        <p>React's StrictMode is used to highlight potential problems in an application by enabling additional checks and warnings for its child components during development.
+            It helps developers write better, more resilient code by detecting unsafe lifecycle methods, legacy API usage, and unexpected side effects.</p>
+        <li>What is the revenue of WhatsApp?</li>
+        <p></p>
+        <li>What is Linting error?</li>
+        <p>A linting error is a code issue identified by a linter tool that flags deviations from coding standards, style guidelines, or best practices. It helps improve code quality, readability, and prevents potential bugs.</p>
     </ol>
     
 </body>
